# maestro

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  agent-loop-tui  devenv.yaml  example.txt  hidave.md  motif.md  orchestration_manifesto.txt  prompt.md
.cargo/: config.toml
.claude/rules/: react-hooks.md
.claude/skills/: react-best-practices
app/: .gitignore  index.html  package.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: agent_state.rs  hooks.rs  lib.rs  sessions.rs  terminal.rs  tools.rs
app/src-tauri/src/daemon/: claudecode_adapter.rs  client.rs  commands.rs  config.rs  mod.rs  opencode_adapter.rs  protocol.rs
app/src-tauri/src/storage/: index_store.rs  message_store.rs  mod.rs  session_store.rs  thread_store.rs
crates/loom-analytics/: Cargo.toml
crates/loom-analytics-core/: Cargo.toml
crates/loom-analytics-core/src/: api_key.rs  identify.rs
crates/loom-analytics/src/: batch.rs  error.rs  properties.rs
crates/loom-cli-acp/: Cargo.toml
crates/loom-cli-acp/src/: agent.rs  bridge.rs  error.rs
crates/loom-cli-auto-commit/: Cargo.toml
crates/loom-cli-credentials/: Cargo.toml
crates/loom-cli-credentials/src/: store_fallback.rs
crates/loom-cli-spool/: Cargo.toml
crates/loom-cli-spool/src/commands/: compare.rs  draw.rs  duplicate.rs  mark.rs  show.rs  snip.rs  stitch.rs  tension_log.rs  unravel.rs  untangle.rs
crates/loom-cli-tools/: Cargo.toml
crates/loom-cli-tools/src/: edit_file.rs  read_file.rs  registry.rs
crates/loom-cli-wgtunnel/: Cargo.toml
crates/loom-cli-wgtunnel/src/: client.rs  error.rs  keys.rs  lib.rs
crates/loom-cli-wgtunnel/src/commands/: mod.rs  ssh.rs  tunnel.rs
crates/loom-common-config/: Cargo.toml
crates/loom-common-config/src/: lib.rs
crates/loom-common-core/: Cargo.toml
crates/loom-common-core/src/: agent.rs  config.rs  error.rs  lib.rs  llm.rs  server_query.rs  tool.rs
crates/loom-common-thread/: Cargo.toml
crates/loom-common-thread/src/: error.rs  lib.rs  model.rs  store.rs  sync.rs
crates/loom-common-webhook/: Cargo.toml
crates/loom-common-webhook/src/: lib.rs
crates/loom-crash/: Cargo.toml
crates/loom-crash-core/: Cargo.toml
crates/loom-crash-core/src/: breadcrumb.rs  context.rs  error.rs  fingerprint.rs  lib.rs  release.rs  symbol.rs
crates/loom-crash/examples/: capture.rs
crates/loom-crash/src/: backtrace.rs  client.rs  error.rs
crates/loom-crons/: Cargo.toml
crates/loom-crons-core/: Cargo.toml
crates/loom-crons-core/src/: checkin.rs  error.rs  monitor.rs  sse.rs  stats.rs
crates/loom-crons/src/: client.rs
crates/loom-flags/: Cargo.toml
crates/loom-flags/src/: analytics.rs  lib.rs  sse.rs
crates/loom-scim/: Cargo.toml
crates/loom-scim/src/: patch.rs
crates/loom-scim/src/filter/: ast.rs  eval.rs  mod.rs  parser.rs
crates/loom-server-audit/: Cargo.toml
crates/loom-server-audit/src/: enrichment.rs  error.rs  event.rs  lib.rs  pipeline.rs
crates/loom-server-audit/src/sink/: file.rs  json_stream.rs  sqlite.rs  syslog.rs
crates/loom-server-geoip/: Cargo.toml
crates/loom-server-geoip/src/: lib.rs
crates/loom-server-github-app/: Cargo.toml
crates/loom-server-github-app/src/: config.rs  error.rs  jwt.rs  lib.rs  webhook.rs
crates/loom-server-k8s/: Cargo.toml
crates/loom-server-k8s/src/: error.rs  token_review.rs
crates/loom-server-llm-anthropic/: Cargo.toml
crates/loom-server-llm-anthropic/src/: lib.rs  pool.rs  types.rs
crates/loom-server-llm-anthropic/src/auth/: mod.rs  oauth_client.rs  oauth_flow.rs  pkce.rs
crates/loom-server-llm-service/: Cargo.toml
crates/loom-server-llm-service/src/: config.rs
crates/loom-server-llm-vertex/: Cargo.toml
crates/loom-server-llm-vertex/src/: types.rs
crates/loom-server-session/: Cargo.toml
crates/loom-server-wgtunnel/: Cargo.toml
crates/loom-server-wgtunnel/src/: config.rs  derp.rs  lib.rs  peer_stream.rs  sessions.rs  weavers.rs
daemon/: Cargo.toml
daemon/claude-sdk/: package.json
daemon/claude-sdk-server/: package.json  tsconfig.json
daemon/claude-sdk-server/src/: index.ts  logger.ts  types.ts
daemon/claude-sdk-server/src/events/: emitter.ts  mapper.ts
daemon/claude-sdk-server/src/routes/: events.ts  messages.ts  sessions.ts
daemon/claude-sdk-server/src/sdk/: agent.ts  permissions.ts
daemon/claude-sdk-server/src/storage/: sessions.ts
daemon/claude-sdk-server/test/: contract-validation.ts  resume-verification.ts
daemon/claude-sdk/src/: server.ts
daemon/claude-server/: package.json  tsconfig.json
daemon/claude-server/src/: server.ts
daemon/claude-server/src/permissions/: manager.ts  types.ts
daemon/claude-server/src/sdk/: permissions.ts
daemon/src/: claude_sdk.rs  config.rs  connection.rs  git.rs  main.rs  opencode.rs  protocol.rs  state.rs  terminal.rs
daemon/src/handlers/: auth.rs  claude_sdk.rs  git.rs  mod.rs  opencode.rs  sessions.rs  terminal.rs
docker/: Dockerfile  nginx.conf
scripts/: .gitkeep  agent-loop-analyze.sh  agent-loop-pick-spec.sh  agent-loop-tui.sh  agent-loop.sh  bootstrap-claude.sh  check-i18n-coverage-rust.sh  deploy-daemon.sh  spec-review-apply.sh  spec-review.sh
specs/: CLAUDE_CODE_RESEARCH.md  CODEX_MONITOR_ANALYSIS.md  OPENCODE_RESEARCH.md  README.md  ROADMAP.md  VISION.md  acp-system.md  agent-loop-terminal-ux.md  agent-state-machine.md  analytics-implementation-plan.md  audit-system.md  auth-abac-system.md  auto-commit-system.md  claude-sdk-restart-resilience.md  claude-sdk-server.md  claude-sdk-ui.md  claude-session-history.md  composer-options.md  container-system.md  crons-system.md  docs-system.md  dynamic-tool-approvals.md  error-handling.md  feature-flags-system.md  git-diff-ui.md  github-app-system.md  i18n-system.md  job-scheduler-system.md  observability-ui.md  orchestrator.md  retry-strategy.md  sbom-system.md  scm-system.md  search-system.md  server-query-phase-2.md  session-persistence.md  session-settings.md  spool-system.md  state-machine-wiring.md  streaming-event-schema.md  (+4 more)
tests/: agent-loop.bats
web/: package.json  pnpm-lock.yaml
(+1245 files in other folders)
