[package]
name = "orchestrator"
version = "0.1.0"
description = "Agent Orchestrator"
authors = ["you"]
edition = "2021"
default-run = "orchestrator"

[lib]
name = "orchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "net", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }

# Terminal handling
portable-pty = "0.8"

# Git operations
git2 = "0.20"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[target."cfg(target_os = \"macos\")".dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
