# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-analytics-core"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
description = "Analytics core types for Loom product analytics"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
loom-common-secret = { path = "../loom-common-secret" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
uuid7 = { version = "1", features = ["serde"] }

[dev-dependencies]
proptest = "1"
