# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-analytics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK client for Loom product analytics"

[dependencies]
loom-analytics-core = { path = "../loom-analytics-core" }
loom-common-http = { path = "../loom-common-http" }

async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
uuid7.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
wiremock = "0.6"
