# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-cli-acp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Client Protocol (ACP) integration for Loom"

[dependencies]
# Internal crates
loom-common-core = { path = "../loom-common-core" }
loom-server-llm-proxy = { path = "../loom-server-llm-proxy" }
loom-common-thread = { path = "../loom-common-thread" }
loom-cli-tools = { path = "../loom-cli-tools" }

# ACP SDK
agent-client-protocol = "0.9"

# Async runtime
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
