# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-cli-credentials"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider-agnostic credential storage for Loom"

[features]
default = []
keyring = ["dep:keyring"]

[dependencies]
keyring = { version = "3", optional = true }
async-trait = { workspace = true }
loom-common-secret = { path = "../loom-common-secret" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
