# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-cli-spool"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI implementation for loom spool commands"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored = "2"
hex = { workspace = true }
itertools = "0.14"
loom-common-spool = { path = "../loom-common-spool" }
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
