# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-cli-wgtunnel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI commands for WireGuard tunnel management"

[dependencies]
loom-wgtunnel-common = { path = "../loom-wgtunnel-common" }
loom-wgtunnel-engine = { path = "../loom-wgtunnel-engine" }
loom-common-secret = { path = "../loom-common-secret" }
loom-common-http = { path = "../loom-common-http" }

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["process", "fs", "sync", "signal"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# Terminal output
console = "0.15"
indicatif = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
