# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-common-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common configuration primitives for Loom (Secret type, env helpers)"

[dependencies]
loom-common-secret = { path = "../loom-common-secret" }
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "loom-common-secret/serde"]
