# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-common-thread"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
utoipa = { version = "5", optional = true }
loom-common-core = { path = "../loom-common-core" }
loom-common-http = { path = "../loom-common-http" }
loom-common-secret = { path = "../loom-common-secret" }

async-trait = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

chrono = { version = "0.4", features = ["serde"] }
url = "2"
uuid7 = "1"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
