# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-crash-core"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
description = "Core types for Loom crash analytics system"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }

[features]
openapi = ["utoipa"]

[dependencies.utoipa]
version = "5"
optional = true

[dev-dependencies]
proptest = "1"
