# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-crash"
version = "0.1.0"
edition = "2021"
description = "Crash analytics SDK for Rust applications"
license = "Proprietary"

[dependencies]
loom-crash-core = { path = "../loom-crash-core" }
loom-common-http = { path = "../loom-common-http" }

async-trait = "0.1"
backtrace = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rustc-demangle = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
