# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-crons"
version = "0.1.0"
edition = "2021"
description = "Cron monitoring SDK for Rust applications"
license = "Proprietary"

[dependencies]
loom-crons-core = { path = "../loom-crons-core" }
loom-common-http = { path = "../loom-common-http" }
loom-crash = { path = "../loom-crash", optional = true }

async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
crash = ["loom-crash"]
