# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-flags"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
description = "Feature flags Rust SDK for Loom"

[dependencies]
# Core types
loom-flags-core = { path = "../loom-flags-core" }

# HTTP client
loom-common-http = { path = "../loom-common-http" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# SSE streaming
eventsource-stream = "0.2"
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt"] }
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# i18n
loom-common-i18n = { path = "../loom-common-i18n" }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
