# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-server-audit"
version = "0.1.0"
edition = "2021"
description = "Audit logging system with SIEM integration for Loom"
license = "Proprietary"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "net", "io-util"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

loom-common-http = { path = "../loom-common-http" }
loom-common-secret = { path = "../loom-common-secret" }
loom-redact = { path = "../loom-redact" }
loom-server-auth = { path = "../loom-server-auth" }
loom-server-config = { path = "../loom-server-config" }

# TLS support for sinks
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }

# Optional dependencies for specific sinks
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
maxminddb = { version = "0.24", optional = true }
rand = { version = "0.9", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["sink-sqlite", "sink-tracing"]
sink-sqlite = ["sqlx"]
sink-tracing = []
sink-syslog = []
sink-syslog-tls = ["sink-syslog", "tokio-rustls", "rustls", "rustls-pki-types", "webpki-roots"]
sink-http = ["reqwest", "rand"]
sink-json-stream = []
sink-json-stream-tls = ["sink-json-stream", "tokio-rustls", "rustls", "rustls-pki-types", "webpki-roots"]
sink-file = []
geo-ip = ["maxminddb"]
