# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-server-geoip"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GeoIP lookup service for Loom using MaxMind databases"

[dependencies]
maxminddb = "0.24"
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }

[lints.clippy]
all = "warn"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
