# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-server-github-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GitHub App client for Loom"

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
utoipa = { version = "5", optional = true }
loom-common-config.workspace = true
loom-common-http = { path = "../loom-common-http" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# JWT signing
jsonwebtoken = "9"

# HMAC for webhook verification
loom-common-webhook = { path = "../loom-common-webhook" }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2"

# Base64 decoding for file contents
base64 = "0.22"

[dev-dependencies]
proptest = { workspace = true }
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
tokio-test = { workspace = true }
