# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-server-llm-anthropic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
bytes = "1"
futures = { workspace = true }
getrandom = "0.2"
loom-common-core = { path = "../loom-common-core" }
loom-cli-credentials = { path = "../loom-cli-credentials" }
loom-common-http = { path = "../loom-common-http" }
loom-common-secret = { path = "../loom-common-secret" }
pin-project-lite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.5"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
