# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-server-llm-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Server-side LLM provider abstraction for Loom"

[dependencies]
loom-common-config.workspace = true
loom-common-core = { path = "../loom-common-core" }
loom-common-http = { path = "../loom-common-http" }
loom-server-llm-anthropic = { path = "../loom-server-llm-anthropic" }
loom-server-llm-openai = { path = "../loom-server-llm-openai" }
loom-server-llm-vertex = { path = "../loom-server-llm-vertex" }
loom-server-llm-zai = { path = "../loom-server-llm-zai" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
