# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-server-llm-vertex"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Google Vertex AI (Gemini) LLM client for Loom"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
loom-common-core = { path = "../loom-common-core" }
loom-common-http = { path = "../loom-common-http" }
pin-project-lite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# GCP authentication via Application Default Credentials
gcp_auth = "0.12"

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
