# Copyright (c) 2025 Geoffrey Huntley <ghuntley@ghuntley.com>. All rights reserved.
# SPDX-License-Identifier: Proprietary

[package]
name = "loom-server-session"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Session creation service for Loom authentication flows"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

loom-server-auth = { path = "../loom-server-auth" }
loom-server-db = { path = "../loom-server-db" }
loom-server-audit = { path = "../loom-server-audit" }

[dev-dependencies]
tokio-test.workspace = true
